Refactor backend, add robust local PostgreSQL setup and automation